# coegi

./: .editorconfig  .gitignore  Makefile  pyproject.toml
coegi/projects/: admin.py  apps.py  models.py  urls.py  views.py
coegi/projects/migrations/: 0002_remove_project_description.py  0003_alter_task_options_alter_task_unique_together.py  0004_alter_task_note.py
coegi/projects/templates/projects/: projects_list.html  workspace.html
coesi/projects/: apps.py  views.py
coesi/projects/migrations/: 0001_initial.py
coesi/projects/templates/projects/: projects_list.html
config/: settings.py  urls.py
static/css/: globals.css  styles.css
templates/: base.html
templates/includes/: _navbar_actions.html  _sidebar.html
