[project]
name = "coesi"
version = "0.1.0"
description = "Pratical personal tasks management application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "djlint>=1.36.4",
    "mypy>=1.20.1",
    "ruff>=0.15.10",
]
